--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
-.vs
 Release/*
 x64/*
 PapyrusUtil.7z
+
+# visual studio
+*.sdf
+*.opensdf
+*.suo
+.vs
+*.VC.db
+*.VC.opendb
+*.ncb
+*.user
+*.aps
+*.vspscc
+
+# build output
+*.tlog
+*.lastbuildstate
+*.unsuccessfulbuild
+*.lib
+*.log
+*.obj
+*.idb
+*.pdb
+*.res
+*.cache
+BuildLog.htm
+*.exe
+*.dll
+*.exp
+*.ilk
+
+# cmake
+build/*
